force-app/main/default/objects/Application_Participation_Agreement__c/fields/Sport_Event__c.field-meta.xml
<CustomField>
    <fullName>Sport_Event__c</fullName>
    <label>Sport/Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Boys Basketball</fullName>
            </value>
            <value>
                <fullName>Boys Lacrosse</fullName>
            </value>
            <value>
                <fullName>Cheer and Dance</fullName>
            </value>
            <value>
                <fullName>Choral</fullName>
            </value>
            <value>
                <fullName>Cross Country</fullName>
            </value>
            <value>
                <fullName>Field Hockey</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Girls Basketball</fullName>
            </value>
            <value>
                <fullName>Girls Lacrosse</fullName>
            </value>
            <value>
                <fullName>Girls Leadership</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Instrumental</fullName>
            </value>
            <value>
                <fullName>Softball</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Track and Field</fullName>
            </value>
            <value>
                <fullName>Volleyball</fullName>
            </value>
            <value>
                <fullName>Wrestling</fullName>
            </value>
            <value>
                <fullName>E Sports &amp; Gaming</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
                <isActive>false</isActive>
                <label>Gaming</label>
            </value>
            <value>
                <fullName>eSport</fullName>
                <isActive>false</isActive>
                <label>eSport</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>