force-app/main/default/objects/Application_Participation_Agreement__c/fields/Spring_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Spring_Additional_Notes__c</fullName>
    <label>Spring - Additional Notes:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>