force-app/main/default/objects/Application_Participation_Agreement__c/fields/Spring_Training_Application__c.field-meta.xml
<CustomField>
    <fullName>Spring_Training_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spring Training Application</label>
    <type>Checkbox</type>
</CustomField>