force-app/main/default/objects/Application_Participation_Agreement__c/fields/Spring_Training_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Spring_Training_Arrival_Date__c</fullName>
    <label>Spring Training Arrival Date</label>
    <type>Date</type>
</CustomField>