force-app/main/default/objects/Application_Participation_Agreement__c/fields/Team_Facebook_Page__c.field-meta.xml
<CustomField>
    <fullName>Team_Facebook_Page__c</fullName>
    <label>Team Facebook Page</label>
    <type>Url</type>
</CustomField>