force-app/main/default/objects/Application_Participation_Agreement__c/fields/Team_Instagram__c.field-meta.xml
<CustomField>
    <fullName>Team_Instagram__c</fullName>
    <label>Team Instagram</label>
    <length>25</length>
    <type>Text</type>
</CustomField>