force-app/main/default/objects/Application_Participation_Agreement__c/fields/Team_Twitter_Handle__c.field-meta.xml
<CustomField>
    <fullName>Team_Twitter_Handle__c</fullName>
    <label>Team Twitter Handle</label>
    <length>25</length>
    <type>Text</type>
</CustomField>