force-app/main/default/objects/Application_Participation_Agreement__c/fields/Today_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date__c</fullName>
    <label>Today&apos;s Date</label>
    <type>Date</type>
</CustomField>