force-app/main/default/objects/Application_Participation_Agreement__c/fields/X2_Years_Prior_Season_Record__c.field-meta.xml
<CustomField>
    <fullName>X2_Years_Prior_Season_Record__c</fullName>
    <label>2 Years Prior Season Record</label>
    <length>10</length>
    <type>Text</type>
</CustomField>