force-app/main/default/objects/Application_Participation_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>School_Name__c</columns>
    <columns>Date_of_Event__c</columns>
    <columns>Spring_Training_Arrival_Date__c</columns>
    <columns>Spring_Training_Departure_Date__c</columns>
    <columns>Sport_Event__c</columns>
    <columns>Coaches_Email__c</columns>
    <columns>Head_Coach__c</columns>
    <columns>Coaches_Cell_Phone__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>