force-app/main/default/objects/Application_Participation_Agreement__c/listViews/Applications_Not_Assigned.listView-meta.xml
<ListView>
    <fullName>Applications_Not_Assigned</fullName>
    <columns>NAME</columns>
    <columns>Sport_Event__c</columns>
    <columns>Date_of_Event__c</columns>
    <columns>Head_Coach__c</columns>
    <columns>Coaches_Cell_Phone__c</columns>
    <columns>Coaches_Email__c</columns>
    <columns>Location__c</columns>
    <columns>School_Name__c</columns>
    <columns>School_City__c</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Related_Opportunity__c</field>
        <operation>equals</operation>
    </filters>
    <label>Applications Not Assigned</label>
</ListView>