force-app/main/default/objects/Application_Participation_Agreement__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>School_Name__c</columns>
    <columns>Date_of_Event__c</columns>
    <columns>Event_Month__c</columns>
    <columns>Event_Day__c</columns>
    <columns>Event_Year__c</columns>
    <columns>Sport_Event__c</columns>
    <columns>Head_Coach__c</columns>
    <columns>Coaches_Cell_Phone__c</columns>
    <columns>Coaches_Email__c</columns>
    <columns>Location__c</columns>
    <columns>School_City__c</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Month__c</field>
        <operation>equals</operation>
        <value>December</value>
    </filters>
    <filters>
        <field>Event_Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <label>2021 GBB FL Applications</label>
</ListView>