force-app/main/default/objects/Application_Participation_Agreement__c/listViews/Girls_and_Boys_Basketball.listView-meta.xml
<ListView>
    <fullName>Girls_and_Boys_Basketball</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>School_Name__c</columns>
    <columns>Sport_Event__c</columns>
    <columns>School_City__c</columns>
    <columns>Team_Instagram__c</columns>
    <columns>Team_Twitter_Handle__c</columns>
    <columns>Team_Facebook_Page__c</columns>
    <columns>School_Mascot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sport_Event__c</field>
        <operation>equals</operation>
        <value>Boys Basketball,Girls Basketball</value>
    </filters>
    <label>Girls and Boys Basketball</label>
</ListView>