force-app/main/default/objects/Application_Participation_Agreement__c/listViews/Spring_Training_Applicationa.listView-meta.xml
<ListView>
    <fullName>Spring_Training_Applicationa</fullName>
    <columns>NAME</columns>
    <columns>School_Name__c</columns>
    <columns>Head_Coach__c</columns>
    <columns>Coaches_Email__c</columns>
    <columns>Sport_Event__c</columns>
    <columns>Spring_Training_Arrival_Date__c</columns>
    <columns>Spring_Training_Departure_Date__c</columns>
    <columns>Spring_Training_Application__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Spring_Training_Application__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Spring Training Applicationa</label>
</ListView>