force-app/main/default/objects/Application_Participation_Agreement__c/listViews/X2019_Cross_Country.listView-meta.xml
<ListView>
    <fullName>X2019_Cross_Country</fullName>
    <columns>NAME</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>School_Name__c</columns>
    <columns>Head_Coach__c</columns>
    <columns>Coaches_Cell_Phone__c</columns>
    <columns>Coaches_Email__c</columns>
    <columns>School_Mailing_Address__c</columns>
    <columns>School_City__c</columns>
    <columns>School_State__c</columns>
    <columns>School_Zip__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sport_Event__c</field>
        <operation>equals</operation>
        <value>Cross Country</value>
    </filters>
    <label>2019 Cross Country</label>
</ListView>