force-app/main/default/objects/Application_Participation_Agreement__c/listViews/X2019_GBB_Team_Apps.listView-meta.xml
<ListView>
    <fullName>X2019_GBB_Team_Apps</fullName>
    <columns>NAME</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>School_Name__c</columns>
    <columns>Date_of_Event__c</columns>
    <columns>Sport_Event__c</columns>
    <columns>Head_Coach__c</columns>
    <columns>Coaches_Cell_Phone__c</columns>
    <columns>Coaches_Email__c</columns>
    <columns>School_City__c</columns>
    <columns>School_State__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Related_Opportunity__c</field>
        <operation>startsWith</operation>
        <value>2019 GBB</value>
    </filters>
    <label>2019 GBB Team Apps</label>
</ListView>